Added css styling to the webbpage

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="wrapper">
     <header>
-      <h1>ALZA EMPLOYEE PASSOWORD GENERATOR</h1>
+      <h1>ALZA EMPLOYEE PASSWORD GENERATOR</h1>
     </header>
     <div class="card">
       <div class="card-header">
